fixed snackbar overlaping with Fab

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -68,3 +68,7 @@ button.mat-fab {
         stroke: #fff;
     }
 }
+
+.mat-snack-bar-handset {
+    margin-bottom: 72px !important;
+}
